recursion.cons.lessons.recursion.cons.Increasing.scala.error
increasing:5: error: value head is not a member of Int
    if(l.head<=l.head.head){
                      ^