recursion.cons.lessons.recursion.cons.Increasing.scala.code
def increasing(l:List[Int]): Boolean = {
  if(l.tail==Nil){
    return true
  }else{
    if(l.head<=l.head.head){
      return increasing(l.tail)
    }else{
      return false
    }
  }
}